--- a/style.css
+++ b/style.css
@@ -2,23 +2,14 @@
   margin: 0;
 }
 
-footer {
-  background-color: rgb(110,30,120);
-  background: linear-gradient(99deg,
-  rgba(110,30,120,1) 0%,
-  rgba(161,0,107,1) 39%,
-  rgba(205,0,55,1) 100%);
-}
-
-
-
 a {
     display:block;
-	  width:150px;
     text-decoration: none;
+    justify-content: space-between;
     color: rgb(250, 247, 247);
     font-size: 1.2em;
     font-family:Arial, Helvetica, sans-serif;
+    margin-left: 30px;
   
 
 }
@@ -162,22 +153,24 @@ em {
 }
 
 .img {
-	filter: grayscale(100%);
-	transition: .3s ease-in-out;
-  width: 50px;
-  height: 50px;
+
+  border-radius:47% 53% 46% 54% / 53% 52% 48% 47%; 
   
 }
 
 #lu {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  z-index: 0;
+  justify-content:left;
+  
+}
+
+ol {
+  list-style-type: none;
 }
 
 
-@media screen and (max-width: 1200px) 
+@media screen and (max-width: 1200px)
 {
 
 .sidenav {
