--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ ol {
 
 #grandeboite {
   margin-left: 0;
+  margin-top: 90px;
   background: rgb(110,30,120);
   background: linear-gradient(90deg, 
   rgba(110,30,120,1) 0%,
