--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
 body{
   margin: 0;
+  font-family:arial, Helvetica, sans-serif;
+}
+
+.btn {
+  height: 50px;
+  width: 50px;
+  background: rgb(110,30,120);
+  background: linear-gradient(90deg, 
+  rgba(110,30,120,1) 0%,
+  rgba(161,0,107,1) 39%, 
+  rgba(205,0,55,1) 100%);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  cursor: pointer;
+  z-index:999;
+}
+.icone {
+  width: 50px;
 }
 
 .navbar{
@@ -13,7 +36,7 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 position: relative;
-  z-index:999;
+z-index:999;
 }
 
 .titre{
@@ -60,7 +83,7 @@ border-radius: 28px;
 }
 
 h1 {
-  position: relative;
+  display: block;
   bottom: 10px;
   font-family:arial, Helvetica, sans-serif;
   text-align: center;
@@ -95,7 +118,7 @@ p {
 #profil {
   position: relative;
   bottom: 950px;
-  left:150px;
+  left: 160px;
   transform: scale(0.16);
   border-radius:50% 50% 48% 52% / 52% 51% 49% 48%;
 }
@@ -128,7 +151,6 @@ h3 {
 .text {
   text-align: left;
   padding: 5px;
-  position:relative;
   top: 10px;
   color: rgb(80, 78, 78);
   font-size:medium;
