--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ padding: 20px 10px;
   }
 
 
-#grandeboite1, #grandeboite2 { 
+#grandeboite1, #grandeboite2, #grandeboite3 { 
 margin: 10px;
 background: #f2f2f2;
 border: 3px solid #808080;
