--- a/style.css
+++ b/style.css
@@ -372,9 +372,15 @@ padding: 20px 10px;
 
 @media screen and (max-width: 768px){
 
-  #profil {
-    display: none;
-  }
+.profil {
+  grid-column-start:1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  width: 80%;
+  padding-top:40px;
+
+}
 
 
 #grandeboite1, #grandeboite2, #grandeboite3 { 
