--- a/style.css
+++ b/style.css
@@ -300,6 +300,15 @@ p {
   border-radius: 28px;
 }
 
+#grandeboite4 { 
+  background: #f2f2f2;
+  margin-top: 50px;
+  margin-left: 480px;
+  width: 900px;
+  border: 3px solid #808080;
+  border-radius: 28px;
+}
+
 
 
 em {
