--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ border-radius: 28px;
   height: 300px;
   border: 3px solid #808080;
   border-radius: 28px;
+  overflow: auto;
 }
 
 h1 {
@@ -112,12 +113,8 @@ h1 {
   padding-top: 60px;
 }
 
-h2 {
-  text-align: center;
-  font-size: 2.5em;
-}
 
-p {
+.pb1 {
   grid-column-start:2;
   grid-column-end: 3;
   grid-row-start: 2;
@@ -128,7 +125,7 @@ p {
 
 .profil {
   grid-column-start:3;
-  grid-column-end: 4;
+  grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 3;
   width: 80%;
@@ -146,6 +143,11 @@ p {
   height: 120px;
 }
 
+h2 {
+  text-align:center;
+
+}
+
 #grandeboite1 { 
   display: grid;
   grid-template-columns: repeat(2, 1fr fr);
@@ -156,17 +158,18 @@ p {
   margin-top: 50px;
   margin-left: 480px;
   width: 900px;
+  height: 300px;
   border: 3px solid #808080;
   border-radius: 28px;
-  
+  overflow: auto;
 }
-
 .p1 {
-  grid-column-start:2;
+  grid-column-start:1;
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
 }
+
 /* ici on commence nos petite-boite pour les placer toute a gauche des petites boites du texte*/
 .p2 {
   grid-column-start:1;
@@ -210,6 +213,7 @@ p {
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
+  margin-left: -40px;
 }
 
 .p5 {
@@ -217,6 +221,7 @@ p {
   grid-column-end: 3;
   grid-row-start: 3;
   grid-row-end: 4;
+  margin-left: -40px;
 }
 
 .p7 {
@@ -224,6 +229,7 @@ p {
   grid-column-end: 3;
   grid-row-start: 4;
   grid-row-end: 5;
+  margin-left: -40px;
 }
 
 .p9 {
@@ -231,6 +237,7 @@ p {
   grid-column-end: 3;
   grid-row-start: 5;
   grid-row-end: 6;
+  margin-left: -40px;
 }
 
 .p11 {
@@ -238,6 +245,7 @@ p {
   grid-column-end: 3;
   grid-row-start: 6;
   grid-row-end: 7;
+  margin-left: -40px;
 }
 
 /* on rend nos dates un pu plus belle, toujours dans le style Carmillon SNCF */
@@ -262,19 +270,18 @@ p {
   margin-bottom:10px;
   font-weight: bold;
   font-size: 1.2em
-  
 }
 
 .space {
   padding-top:5px;
-  margin-left: 25px;
+  padding-right: 15px;
   margin-top:25px;
   margin-bottom:10px;
   font-size:1em;
 }
 
 .text {
-  text-align: left;
+  text-align: center;
   padding: 25px;
   top: 10px;
   color: rgb(80, 78, 78);
@@ -307,8 +314,8 @@ p {
   width: 900px;
   border: 3px solid #808080;
   border-radius: 28px;
-}
 
+}
 
 
 em {
@@ -320,14 +327,6 @@ rgba(205,0,55,1) 100%);
 }
 
 .text1 {
-text-align: center;
-position:relative;
-top: 10px;
-color: rgb(80, 78, 78);
-font-size:medium;
-}
-
-.text2 {
   color: #646464;
   text-align: left;
 }
@@ -473,6 +472,7 @@ font-size:1em;
   background: #f2f2f2;
   border: 3px solid #808080;
   width: auto;
+  height: auto;
   border-radius: 28px;
 }
 .p1 {
