--- a/style.css
+++ b/style.css
@@ -95,26 +95,25 @@ border-radius: 28px;
   rgba(110,30,120,1) 0%,
   rgba(161,0,107,1) 39%, 
   rgba(205,0,55,1) 100%);
-  width: 900px;
+  width:  900px;
   height: 300px;
   border: 3px solid #808080;
   border-radius: 28px;
-  overflow: auto;
 }
 
-h1 {
+.pb1 {
   grid-column-start:2;
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
   font-family:arial, Helvetica, sans-serif;
   color: rgb(252, 251, 251);
-  font-size:1.5em;
-  padding-top: 60px;
+  font-size:1em;
+  padding-top: 70px;
 }
 
 
-.pb1 {
+.pb2 {
   grid-column-start:2;
   grid-column-end: 3;
   grid-row-start: 2;
@@ -143,112 +142,34 @@ h1 {
   height: 120px;
 }
 
-h2 {
-  text-align:center;
-
+h2{
+  text-align: center;
+  font-size:1.9em;
 }
 
 #grandeboite1 { 
-  display: grid;
-  grid-template-columns: repeat(2, 1fr fr);
-  grid-template-rows: repeat(6, 1fr);
-  grid-column-gap: 120px;
-  grid-row-gap: 0px;
   background: #f2f2f2;
   margin-top: 50px;
   margin-left: 480px;
   width: 900px;
-  height: 300px;
+  height: auto;
   border: 3px solid #808080;
   border-radius: 28px;
-  overflow: auto;
-}
-.p1 {
-  grid-column-start:1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 2;
 }
 
-/* ici on commence nos petite-boite pour les placer toute a gauche des petites boites du texte*/
-.p2 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 3;
+table {
+  padding: 15px;
 }
 
-.p4 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 3;
-  grid-row-end: 4;
+td {
+  padding:15px;
 }
 
-.p6 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 4;
-  grid-row-end: 5;
+h3 {
+  text-decoration:underline
 }
 
-.p8 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 5;
-  grid-row-end: 6;
-}
-
-.p10 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 6;
-  grid-row-end: 7;
-}
-
-/* ensuite on place nos autres petites boites (P3/5/7/9 et 10) à droite*/
-
-.p3 {
-  grid-column-start:2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  margin-left: -40px;
-}
-
-.p5 {
-  grid-column-start:2;
-  grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  margin-left: -40px;
-}
-
-.p7 {
-  grid-column-start:2;
-  grid-column-end: 3;
-  grid-row-start: 4;
-  grid-row-end: 5;
-  margin-left: -40px;
-}
-
-.p9 {
-  grid-column-start:2;
-  grid-column-end: 3;
-  grid-row-start: 5;
-  grid-row-end: 6;
-  margin-left: -40px;
-}
-
-.p11 {
-  grid-column-start:2;
-  grid-column-end: 3;
-  grid-row-start: 6;
-  grid-row-end: 7;
-  margin-left: -40px;
-}
-
-/* on rend nos dates un pu plus belle, toujours dans le style Carmillon SNCF */
+/* on rend nos dates un peu plus belle, toujours dans le style Carmillon SNCF */
 
 .date {
   border: 1px solid rgb(110,30,120);
@@ -265,25 +186,19 @@ h2 {
   line-height:21px;
   height: 70px;
   padding-top:30px;
-  margin-left: 25px;
-  margin-top:45px;
-  margin-bottom:10px;
   font-weight: bold;
   font-size: 1.2em
 }
 
 .space {
   padding-top:5px;
-  padding-right: 15px;
+  padding-right: 6px;
   margin-top:25px;
   margin-bottom:10px;
-  font-size:1em;
+  font-size:1.2em;
 }
 
 .text {
-  text-align: center;
-  padding: 25px;
-  top: 10px;
   color: rgb(80, 78, 78);
   font-size:medium;
 }
@@ -296,6 +211,7 @@ h2 {
   width: 900px;
   border: 3px solid #808080;
   border-radius: 28px;
+  padding: 15px;
 }
 
 #grandeboite3 { 
@@ -305,6 +221,7 @@ h2 {
   width: 900px;
   border: 3px solid #808080;
   border-radius: 28px;
+  padding: 15px;
 }
 
 #grandeboite4 { 
@@ -314,6 +231,7 @@ h2 {
   width: 900px;
   border: 3px solid #808080;
   border-radius: 28px;
+  padding: 15px;
 
 }
 
@@ -383,7 +301,7 @@ padding: 20px 10px;
 
 
 
-#grandeboite2, #grandeboite3, #grandeboite4 { 
+#grandeboite1, #grandeboite2, #grandeboite3, #grandeboite4 { 
 margin: 10px;
 background: #f2f2f2;
 border: 3px solid #808080;
@@ -437,22 +355,6 @@ font-size:1.2em;
   margin-top: 85px;
 }
 
-p {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 4;
-  grid-row-end: 5;
-  font-family:arial, Helvetica, sans-serif;
-  color: rgb(250, 246, 246);
-  margin: -115px;
-
-
-}
-
-h3 {
-  text-align: center;
-}
-
 
 .text {
 text-align: left;
@@ -462,123 +364,6 @@ color: rgb(80, 78, 78);
 font-size:1em;
 }
 
-#grandeboite1 { 
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(10, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  margin: 10px;
-  background: #f2f2f2;
-  border: 3px solid #808080;
-  width: auto;
-  height: auto;
-  border-radius: 28px;
-}
-.p1 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 2;
-}
 
-/* ici on commence nos petite-boite pour les placer toute a gauche des petites boites du texte*/
-.p2 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 2;
-}
-
-.p4 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 3;
-  grid-row-end: 4;
-}
-
-.p6 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 5;
-  grid-row-end: 6;
-}
-
-.p8 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 7;
-  grid-row-end: 8;
-}
-
-.p10 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 9;
-  grid-row-end: 10;
-}
-
-.p3 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 3;
-}
-
-.p5 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 4;
-  grid-row-end: 5;
-}
-
-.p7 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 6;
-  grid-row-end: 7;
-
-}
-
-.p9 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 8;
-  grid-row-end: 9;
-
-}
-
-.p11 {
-  grid-column-start:1;
-  grid-column-end: 2;
-  grid-row-start: 10;
-  grid-row-end: 11;
-}
-
-.space {
-  padding:15px;
-  margin: auto;
-  font-size:1em;
-
-}
-
-.date {
-  border: 1px solid rgb(110,30,120);
-  background: rgb(110,30,120);
-  background: linear-gradient(90deg, 
-  rgba(110,30,120,1) 0%,
-  rgba(161,0,107,1) 39%, 
-  rgba(205,0,55,1) 100%);
-  color: white;
-  border-radius: 50%;
-  width :120px;
-  height:120px;
-  text-align: center;
-  line-height:21px;
-  height: 70px;
-  font-weight: bold;
-  font-size: 1.2em
-  
-}
 
 }
