--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ h3 {
 .text {
   color: rgb(80, 78, 78);
   font-size:medium;
+  padding-bottom: 15px;
 }
 
 
@@ -199,8 +200,7 @@ h3 {
   background: #f2f2f2;
   margin-top: 50px;
   margin-left: 480px;
-  width: 900px;
-  height:auto;
+  width: 870px;
   border: 3px solid #808080;
   border-radius: 28px;
   padding: 15px;
@@ -210,7 +210,7 @@ h3 {
   background: #f2f2f2;
   margin-top: 50px;
   margin-left: 480px;
-  width: 900px;
+  width: 870px;
   border: 3px solid #808080;
   border-radius: 28px;
   padding: 15px;
@@ -220,7 +220,7 @@ h3 {
   background: #f2f2f2;
   margin-top: 50px;
   margin-left: 480px;
-  width: 900px;
+  width: 870px;
   border: 3px solid #808080;
   border-radius: 28px;
   padding: 15px;
