--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ list-style-type: none;
 
 
 
-#grandeboite1, #grandeboite2, #grandeboite3, #grandeboite4 #grandeboite5{ 
+#grandeboite1, #grandeboite2, #grandeboite3, #grandeboite4, #grandeboite5 { 
 margin: 10px;
 background: #f2f2f2;
 border: 3px solid #808080;
