--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ list-style-type: none;
 
 
 
-#grandeboite1, #grandeboite2, #grandeboite3, #grandeboite4 { 
+#grandeboite1, #grandeboite2, #grandeboite3, #grandeboite4, #grandeboite5 { 
 margin: 10px;
 background: #f2f2f2;
 border: 3px solid #808080;
@@ -415,7 +415,6 @@ color: rgb(252, 251, 251);
 font-size:1.2em;
 }
 
-
 .text {
 text-align: left;
 position:relative;
@@ -423,7 +422,5 @@ top: 40px;
 color: rgb(80, 78, 78);
 font-size:1em;
 }
-
-
 
 }
