--- a/style.css
+++ b/style.css
@@ -422,5 +422,12 @@ top: 40px;
 color: rgb(80, 78, 78);
 font-size:1em;
 }
+	
+li {
+display: inline;
+padding: 20px 10px;
+margin-left: 0;
+list-style-type: none;
 
+}
 }
